@@ -1,5 +1,7 @@
 Revision history for Perl extension Perl-MinimumVersion
 
+    - deprecate.pm requires perl 5.12 (Alexandr Ciornii)
+
 1.32 Tue 16 Jan 2013
     - require new version of PPIx::Regexp
     - skip sub named keys/each/values in _each_argument() (Pedro Melo, RT#82718)
